initial import of the view functions

--- a/logHouse/.couchapprc
+++ b/logHouse/.couchapprc
@@ -1,6 +1,6 @@
 {
     "env" : {
-        "dev" : {
+        "default" : {
             "db" : "http://localhost:5984/loghouse_dev"
         }
     }
